# local-rag-workspace-assistant

./: .gitignore  AI_File_Explorer.slnx  ARCHITECTURE.md  GenzeonSolution.slnx
WebAppMvc/: Program.cs  appsettings.json
WebAppMvc/Controllers/: HomeController.cs
WebAppMvc/Models/: ErrorViewModel.cs  FileExplorerViewModel.cs
WebAppMvc/Properties/: launchSettings.json
WebAppMvc/Services/: FileSystemService.cs  IFileSystemService.cs  IRagService.cs  RagService.cs
WebAppMvc/Views/: _ViewImports.cshtml
WebAppMvc/Views/Home/: Index.cshtml
WebAppMvc/Views/Shared/: _Layout.cshtml
WebAppMvc/markdownfiles/: AIProjectImplementationPlan.md  AIProjectPrompt.md  IndexPageInstructions.md
ai/rag-engine/: README.md  pyproject.toml  requirements.txt
ai/rag-engine/config/: config.yaml
ai/rag-engine/scripts/: ask_cli.py  ingest_workspace.py  run_api.py  run_mcp_server.py
ai/rag-engine/src/ai_rag/: config.py  models.py
ai/rag-engine/src/ai_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai/rag-engine/src/ai_rag/api/: app.py
ai/rag-engine/src/ai_rag/ingestion/: __init__.py  chunker.py  file_scanner.py  indexer.py  parsers.py
ai/rag-engine/src/ai_rag/mcp_server/: server.py
ai/rag-engine/src/ai_rag/rag/: embeddings.py  prompts.py  qa_service.py  retriever.py
